// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EServiceAttributesSections > should match the snapshot 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          certified.label
        </h2>
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          certified.description
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
            href="https://docs.pagopa.it/interoperabilita-1/manuale-operativo/attributi"
            target="_blank"
          >
            howLink
          </a>
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-9vwyyl-MuiTypography-root"
          >
            mustOwn
          </p>
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiBox-root css-ydo5m"
            >
              <div
                class="css-42v4ct-MuiStack-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ndaqpv-MuiTypography-root"
                >
                  title
                </p>
                <div
                  class="MuiBox-root css-0"
                />
              </div>
              <div
                class="MuiBox-root css-hhy13k"
              >
                <ul
                  class="css-ej44m3-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
                          data-testid="CloseIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1nlxk53-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
                          data-testid="CloseIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1nlxk53-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
                          data-testid="CloseIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="MuiBox-root css-ydo5m"
            >
              <div
                class="css-42v4ct-MuiStack-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ndaqpv-MuiTypography-root"
                >
                  title
                </p>
                <div
                  class="MuiBox-root css-0"
                />
              </div>
              <div
                class="MuiBox-root css-hhy13k"
              >
                <ul
                  class="css-ej44m3-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
                          data-testid="CloseIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          verified.label
        </h2>
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          verified.description
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
            href="https://docs.pagopa.it/interoperabilita-1/manuale-operativo/attributi"
            target="_blank"
          >
            howLink
          </a>
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-9vwyyl-MuiTypography-root"
          >
            mustOwn
          </p>
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiBox-root css-ydo5m"
            >
              <div
                class="css-42v4ct-MuiStack-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ndaqpv-MuiTypography-root"
                >
                  title
                </p>
                <div
                  class="MuiBox-root css-0"
                />
              </div>
              <div
                class="MuiBox-root css-hhy13k"
              >
                <ul
                  class="css-ej44m3-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
                          data-testid="CloseIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1nlxk53-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
                          data-testid="CloseIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1nlxk53-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
                          data-testid="CloseIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="MuiBox-root css-ydo5m"
            >
              <div
                class="css-42v4ct-MuiStack-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ndaqpv-MuiTypography-root"
                >
                  title
                </p>
                <div
                  class="MuiBox-root css-0"
                />
              </div>
              <div
                class="MuiBox-root css-hhy13k"
              >
                <ul
                  class="css-ej44m3-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
                          data-testid="CloseIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          declared.label
        </h2>
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          declared.description
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
            href="https://docs.pagopa.it/interoperabilita-1/manuale-operativo/attributi"
            target="_blank"
          >
            howLink
          </a>
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-9vwyyl-MuiTypography-root"
          >
            mustOwn
          </p>
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiBox-root css-ydo5m"
            >
              <div
                class="css-42v4ct-MuiStack-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ndaqpv-MuiTypography-root"
                >
                  title
                </p>
                <div
                  class="MuiBox-root css-0"
                />
              </div>
              <div
                class="MuiBox-root css-hhy13k"
              >
                <ul
                  class="css-ej44m3-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
                          data-testid="CloseIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1nlxk53-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
                          data-testid="CloseIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1nlxk53-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
                          data-testid="CloseIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="MuiBox-root css-ydo5m"
            >
              <div
                class="css-42v4ct-MuiStack-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ndaqpv-MuiTypography-root"
                >
                  title
                </p>
                <div
                  class="MuiBox-root css-0"
                />
              </div>
              <div
                class="MuiBox-root css-hhy13k"
              >
                <ul
                  class="css-ej44m3-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1u51hmi-MuiSvgIcon-root"
                          data-testid="CloseIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`EServiceAttributesSections > should match the snapshot on no attributes 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          certified.label
        </h2>
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          certified.description
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
            href="https://docs.pagopa.it/interoperabilita-1/manuale-operativo/attributi"
            target="_blank"
          >
            howLink
          </a>
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardInfo MuiAlert-standard css-1fuz9qr-MuiPaper-root-MuiAlert-root"
          role="alert"
        >
          <div
            class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
              data-testid="InfoOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
              />
            </svg>
          </div>
          <div
            class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
          >
            noAttributesRequiredAlert
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          verified.label
        </h2>
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          verified.description
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
            href="https://docs.pagopa.it/interoperabilita-1/manuale-operativo/attributi"
            target="_blank"
          >
            howLink
          </a>
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardInfo MuiAlert-standard css-1fuz9qr-MuiPaper-root-MuiAlert-root"
          role="alert"
        >
          <div
            class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
              data-testid="InfoOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
              />
            </svg>
          </div>
          <div
            class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
          >
            noAttributesRequiredAlert
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          declared.label
        </h2>
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          declared.description
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
            href="https://docs.pagopa.it/interoperabilita-1/manuale-operativo/attributi"
            target="_blank"
          >
            howLink
          </a>
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardInfo MuiAlert-standard css-1fuz9qr-MuiPaper-root-MuiAlert-root"
          role="alert"
        >
          <div
            class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
              data-testid="InfoOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20, 12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10, 10 0 0,0 12,2M11,17H13V11H11V17Z"
              />
            </svg>
          </div>
          <div
            class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
          >
            noAttributesRequiredAlert
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
